Add: Threads and Reactions features
Threads:
- Send thread replies via POST /channels/{id}/messages with parentMessageId
- Get thread replies via GET /channels/{id}/threads/{parentMessageId} (oldest first)
- Channel history excludes thread replies (top-level only)
- Atomic reply_count increment on parent (race-safe SQL)
- Validates: parent exists, same channel, no reply-to-reply
- WS event: thread.reply (distinct from message.new)
- 4 unit tests (success, parent not found, reply-to-reply blocked, get thread)

Reactions:
- Add reaction: POST /channels/{id}/messages/{mid}/reactions {emoji}
- Remove reaction: DELETE /channels/{id}/messages/{mid}/reactions/{emoji}
- List reactions: GET /channels/{id}/messages/{mid}/reactions
- Validates: membership, message exists, not deleted, duplicate handling
- WS events: reaction.added, reaction.removed (no unread tracking)
- 8 unit tests (success, not member, not found, deleted, duplicate, fanout failure, remove, list)

Infrastructure:
- MessageStore port: added getThreadReplies(), incrementReplyCount()
- MessageRepository: thread queries (ASC), channel history excludes replies
- API Gateway: /channels/*/threads* routes to message-service
- SendMessageRequest: added parentMessageId field
- ReactionRepository, ReactionService, ReactionHandler (new files)
- 58 total unit tests (was 46), 0 failures

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>